# CortexCLI

./: .gitignore  Dockerfile  MANIFEST.in  README.md  advanced_code_execution.py  advanced_features.py  build_script.py  code_suggestions.json  config.py  cortex_advanced.db  cortexai  docker-compose.yml  examples.md  help_system.py  install.sh  llm_shell.py  multi_model.py  notes.json  plugin_system.py  publish.py  pyproject.toml  requirements.txt  setup.py  test.py  test_data_cleaned.csv  themes.py  user_settings.json  user_settings.py  voice_commands.py  web_interface.py
.github/workflows/: ci.yml
output/: python_code_20250619_012642.python
plugins/: __init__.py  calculator.py  calendar.py  data_analyzer.py  file_analyzer.py  file_manager.py  notes.py  web_search.py  web_weather.py  web_wikipedia.py
tests/: __init__.py  test_llm_shell.py  test_plugin_system.py
themes/: dark.json  light.json
web_static/: script.js  style.css
web_templates/: base.html  chat.html  code.html  files.html  help.html  index.html  models.html  settings.html  upload.html
